# forschungsseminar2018

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/processing/: processing.cpp  processing.h
cpp/processing/marker/: predefined_markers.h
fzz/: stamp.fzz
ino/test/: test.ino
python/datastructures/: Trackables.py
python/interaction/: Interaction.py
python/parsers/: MessageParser.py
python/style/: style.py
python/util/: Utility.py
python/widgets/: QDrawWidget.py  QMenuWidget.py
tangibles_group/: main.py
tangibles_group/datastructures/: Brush.py  Shape.py  TrackableTypes.py
tangibles_group/evaluation/: Evaluation.py
tangibles_group/interaction/: Effect.py
tangibles_group/parsers/: MessageParser.py
tangibles_group/widgets/: QCustomListViewWidget.py  QDrawWidget.py  QFileIconWidget.py
